updated at: 2023-05-01 22:54, 【オリジナル3Dモデル】asha-エシヤ「GWセール」 - 仮想VoidCat - BOOTH

--- a/VRChat/60/1240960.html
+++ b/VRChat/60/1240960.html
@@ -4,26 +4,26 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      【オリジナル3Dモデル】asha-エシヤ - 仮想VoidCat - BOOTH
+      【オリジナル3Dモデル】asha-エシヤ「GWセール」 - 仮想VoidCat - BOOTH
     </title>
     <meta name="description" content=
-    "オリジナル3Dモデル『エシヤ』です 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
+    "オリジナル3Dモデル『エシヤ』です 4/29~5/7のGWセール期間は3500-&gt;2000になります。 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1240960">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【オリジナル3Dモデル】asha-エシヤ - 仮想VoidCat - BOOTH">
+    "【オリジナル3Dモデル】asha-エシヤ「GWセール」 - 仮想VoidCat - BOOTH">
     <meta name="twitter:description" content=
-    "オリジナル3Dモデル『エシヤ』です 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
+    "オリジナル3Dモデル『エシヤ』です 4/29~5/7のGWセール期間は3500-&gt;2000になります。 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【オリジナル3Dモデル】asha-エシヤ - 仮想VoidCat - BOOTH">
+    "【オリジナル3Dモデル】asha-エシヤ「GWセール」 - 仮想VoidCat - BOOTH">
     <meta property="og:description" content=
-    "オリジナル3Dモデル『エシヤ』です 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
+    "オリジナル3Dモデル『エシヤ』です 4/29~5/7のGWセール期間は3500-&gt;2000になります。 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6_base_resized.jpg">
     <meta property="og:url" content=
@@ -77,9 +77,9 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "knXSDT1lzEoM6FSm3psFTyMZZWInhiiI9agdVypAvKs="></script>
+    "ZxU0Ni6xQ4E2vESDK6cJdOBX3xB9r6f/8gNaBucJh6k="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】asha-エシヤ","description":"オリジナル3Dモデル『エシヤ』です\n\n質問や問題あれば\nTwitter:@yueou\nE-mail：yueou.xu@gmail.com\nVRCID：Yueou\nへ連絡してください\n","url":"https://booth.pm/ja/items/1240960","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】asha-エシヤ「GWセール」","description":"オリジナル3Dモデル『エシヤ』です\n\n4/29~5/7のGWセール期間は3500-\u003e2000になります。\n\n質問や問題あれば\nTwitter:@yueou\nE-mail：yueou.xu@gmail.com\nVRCID：Yueou\nへ連絡してください\n","url":"https://booth.pm/ja/items/1240960","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="knXSDT1lzEoM6FSm3psFTyMZZWInhiiI9agdVypAvKs="></script>
+    nonce="ZxU0Ni6xQ4E2vESDK6cJdOBX3xB9r6f/8gNaBucJh6k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -105,11 +105,11 @@
         <div class="market" data-ga-tracking-id="UA-131333751-1"
         data-product-brand="yueou" data-product-category="208"
         data-product-id="1240960" data-product-list="market_show"
-        data-product-price="2500"
+        data-product-price="2000"
         data-shop-tracking-product-category="3D Characters"
         data-shop-tracking-product-id="1240960"
-        data-shop-tracking-product-name="【オリジナル3Dモデル】asha-エシヤ"
-        data-shop-tracking-product-price="2500" data-tracking=
+        data-shop-tracking-product-name="【オリジナル3Dモデル】asha-エシヤ「G..."
+        data-shop-tracking-product-price="2000" data-tracking=
         "detail_item" id="items">
           <div class="market"></div>
           <div data-page-type="market" id="js-item"></div>
@@ -150,7 +150,7 @@
                             "https://booth.pximg.net/c/48x48/users/5178852/icon_image/779e449d-307c-470d-8edb-d8b28eef7368_base_resized.jpg">仮想VoidCat</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
-                              【オリジナル3Dモデル】asha-エシヤ
+                              【オリジナル3Dモデル】asha-エシヤ「GWセール」
                             </h2>
                           </header>
                         </div>
@@ -167,7 +167,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              949
+                              951
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -182,7 +182,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              949
+                              951
                             </div>
                           </div></a>
                         </div>
@@ -203,7 +203,7 @@
                                     </div>
                                     <div class=
                                     "variation-price u-text-right">
-                                      ¥ 2,500
+                                      ¥ 2,000
                                     </div>
                                   </div>
                                   <div class="variation-cart">
@@ -224,14 +224,14 @@
                                         "off"><button class=
                                         "add-gift flex justify-center box-border items-center cursor-pointer text-text-default shop-theme-text-text border border-border600 shop-theme-border-text bg-white shop-theme-bg-contents w-full mt-8 py-16 text-center"
                                         data-product-id="1240960"
-                                        data-product-price="2500"
+                                        data-product-price="2000"
                                         data-product-brand="yueou"
                                         data-product-category="208"
                                         data-product-variant=
                                         "1929367"
                                         data-shop-tracking-product-id="1240960"
-                                        data-shop-tracking-product-name="【オリジナル3Dモデル】asha-エシヤ"
-                                        data-shop-tracking-product-price="2500"
+                                        data-shop-tracking-product-name="【オリジナル3Dモデル】asha-エシヤ「G..."
+                                        data-shop-tracking-product-price="2000"
                                         data-shop-tracking-product-category="3D Characters"
                                         data-shop-tracking-product-variant="通常商品"
                                         data-tracking="add_item"
@@ -255,7 +255,7 @@
                                           <button class=
                                           "add-gift flex justify-center box-border items-center cursor-pointer text-text-default shop-theme-text-text border border-border600 shop-theme-border-text bg-white shop-theme-bg-contents w-full mt-8 py-16 text-center"
                                           data-product-id="1240960"
-                                          data-product-price="2500"
+                                          data-product-price="2000"
                                           data-product-brand=
                                           "yueou"
                                           data-product-category=
@@ -263,8 +263,8 @@
                                           data-product-variant=
                                           "1929367"
                                           data-shop-tracking-product-id="1240960"
-                                          data-shop-tracking-product-name="【オリジナル3Dモデル】asha-エシヤ"
-                                          data-shop-tracking-product-price="2500"
+                                          data-shop-tracking-product-name="【オリジナル3Dモデル】asha-エシヤ「G..."
+                                          data-shop-tracking-product-price="2000"
                                           data-shop-tracking-product-category="3D Characters"
                                           data-shop-tracking-product-variant="通常商品"
                                           data-tracking="add_item"
@@ -307,8 +307,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【オリジナル3Dモデル】asha-エシヤ" class=
-                            "market-item-detail-item-image"
+                            <img alt="【オリジナル3Dモデル】asha-エシヤ「GWセール」"
+                            class="market-item-detail-item-image"
                             data-origin=
                             "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6.png"
                             src=
@@ -318,8 +318,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【オリジナル3Dモデル】asha-エシヤ" class=
-                            "market-item-detail-item-image"
+                            <img alt="【オリジナル3Dモデル】asha-エシヤ「GWセール」"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/d11880d3-8f47-46b8-b61f-ab0b23a332a8_base_resized.jpg"
                             data-origin=
@@ -329,8 +329,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【オリジナル3Dモデル】asha-エシヤ" class=
-                            "market-item-detail-item-image"
+                            <img alt="【オリジナル3Dモデル】asha-エシヤ「GWセール」"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/b2681789-eeb2-4ec6-869e-fc0d710cef80_base_resized.jpg"
                             data-origin=
@@ -340,8 +340,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【オリジナル3Dモデル】asha-エシヤ" class=
-                            "market-item-detail-item-image"
+                            <img alt="【オリジナル3Dモデル】asha-エシヤ「GWセール」"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/5ce5e9e8-7949-4e6a-8c28-e09517361bf6_base_resized.jpg"
                             data-origin=
@@ -374,8 +374,9 @@
                         "js-market-item-detail-description description">
                           <p class=
                           "autolink break-words font-noto-sans typography-16 whitespace-pre-line">
-                            オリジナル3Dモデル『エシヤ』です 質問や問題あれば
-                            Twitter:@yueou
+                            オリジナル3Dモデル『エシヤ』です
+                            4/29~5/7のGWセール期間は3500-&gt;2000になります。
+                            質問や問題あれば Twitter:@yueou
                             E-mail：yueou.xu@gmail.com VRCID：Yueou
                             へ連絡してください
                           </p>
@@ -789,7 +790,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
