updated at: 2023-05-03 19:05, 黒板、ホワイトボードのローポリ3Dモデル、ボード描き用UV画像【オリジナル3Dモデル】 - wakamaru shop - BOOTH

--- a/VRChat/52/1038652.html
+++ b/VRChat/52/1038652.html
@@ -30,7 +30,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1038652">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="UA-187635890-1">
+    <meta name="ga:shop" content="G-J1ZTKT1KBJ">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -78,7 +78,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "kicOYBOIti0ICSQ9Eu45a7MBGnpJnfUSaEutm56wNaA="></script>
+    "tlhxZiFd8h2+7xoJXgP0YARAP1riVn9+QO7J/TTVpdQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"黒板、ホワイトボードのローポリ3Dモデル、ボード描き用UV画像【オリジナル3Dモデル】","description":"黒板とホワイトボードのローポリ3Dモデル2種（縦長△44ポリゴン、横長△44ポリゴン）、Prefab8種です。\n\nVRChatのアバター、ワールドでの使用を想定して制作しました。\nお店の入り口や建物内の壁など、さまざまな場面で使うことができます。\nワールド内のギミックで、文字や絵を書き換えていく使い方も考えられます。\n使用の際は、縦横の比率を変えずにサイズ調整することをおすすめします。\n\n---------------------------------------------------------------\nファイルの中身\n・Board.unitypackage\n・Board.fbx（△44ポリゴン）\n・Board_Wide.fbx（△44ポリゴン）\n・BlackBoard.tga\n・BlackBoard_Emission.tga\n・BlackBoard_Wide_Emission.tga\n・Board_Wood.tga\n・Board_Wood_Normal.tga\n・WhiteBoard.tga\n・WhiteBoard_Second.tga\n・BoardUV.png（縦長ボードのUV）\n・Board_WideUV.png（横長ボードのUV）\n・WoodUV.png（木枠のUV）\n\nテクスチャデータはサイズ1024で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが大きいので、unityで使う際に圧縮をしてください。\nunitypackage内のテクスチャは圧縮をしてあります。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。","url":"https://booth.pm/ja/items/1038652","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1038652/af37cd46-8d3c-4c96-91ad-cd4e229e17bc_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kicOYBOIti0ICSQ9Eu45a7MBGnpJnfUSaEutm56wNaA="></script>
+    nonce="tlhxZiFd8h2+7xoJXgP0YARAP1riVn9+QO7J/TTVpdQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -103,7 +103,7 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id="UA-187635890-1"
+        <div class="market" data-ga-tracking-id="G-J1ZTKT1KBJ"
         data-product-brand="wakamaru" data-product-category="210"
         data-product-id="1038652" data-product-list="market_show"
         data-product-price="200"
@@ -169,7 +169,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              297
+                              298
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -184,7 +184,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              297
+                              298
                             </div>
                           </div></a>
                         </div>
@@ -241,7 +241,7 @@
                                         data-product-list=
                                         "from market_show via market as gift to add_item"
                                         data-ga-tracking-id=
-                                        "UA-187635890-1" type=
+                                        "G-J1ZTKT1KBJ" type=
                                         "submit"><input type=
                                         "hidden" name=
                                         "cart_item[variation_id]"
@@ -274,7 +274,7 @@
                                           data-product-list=
                                           "from market_show via market as gift to add_item"
                                           data-ga-tracking-id=
-                                          "UA-187635890-1" type=
+                                          "G-J1ZTKT1KBJ" type=
                                           "submit">ギフトとして贈る</button>
                                         </div>
                                       </form>
