updated at: 2023-05-03 19:08, 蝶（オオルリアゲハ）のローポリ3Dモデル△8ポリゴン、テクスチャ5色、UnityのAnimation付【オリジナル3Dモデル】 - wakamaru shop - BOOTH

--- a/VRChat/66/1037366.html
+++ b/VRChat/66/1037366.html
@@ -30,7 +30,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1037366">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="UA-187635890-1">
+    <meta name="ga:shop" content="G-J1ZTKT1KBJ">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -78,7 +78,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "gF17UBU2bzXEoWOzfoMDkCg38ijXBnxwanA1p4LIP6o="></script>
+    "Ep6F7vQwx25tVzqgJdQx2JketSKudpGyGr39bg9pB04="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"蝶（オオルリアゲハ）のローポリ3Dモデル△8ポリゴン、テクスチャ5色、UnityのAnimation付【オリジナル3Dモデル】","description":"蝶（オオルリアゲハ）のローポリ3Dモデル（△8ポリゴン）、ベースの黒と5色のEmission用テクスチャです。\n\nUnityPackageには羽を動かすアニメーション入り。\nPrefabはAnimatorを設定してあります。\n（2018/10/05確認、そのままVRChatでも動きました。）\n\nVRChatのアバター、ワールドでの使用を想定して、容量を抑えることができる仕様にしてあります。\n---------------------------------------------------------------\nファイルの中身\n・OoruriAgeha.unitypackage\n・OoruriAgeha.fbx（△8ポリゴン）\n・OoruriAgeha.tga\n・OoruriAgeha_Emission_Blue.tga\n・OoruriAgeha_Emission_Green.tga\n・OoruriAgeha_Emission_Orange.tga\n・OoruriAgeha_Emission_Purple.tga\n・OoruriAgeha_Emission_Red.tga\n\nテクスチャデータはサイズ1024で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが大きいので、unityで使う際に圧縮をしてください。\nunitypackage内のテクスチャはサイズ512で圧縮もしてあります。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。","url":"https://booth.pm/ja/items/1037366","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1037366/fcb65130-f479-46f6-b801-af712e32be77_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gF17UBU2bzXEoWOzfoMDkCg38ijXBnxwanA1p4LIP6o="></script>
+    nonce="Ep6F7vQwx25tVzqgJdQx2JketSKudpGyGr39bg9pB04="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -103,7 +103,7 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id="UA-187635890-1"
+        <div class="market" data-ga-tracking-id="G-J1ZTKT1KBJ"
         data-product-brand="wakamaru" data-product-category="209"
         data-product-id="1037366" data-product-list="market_show"
         data-product-price="300"
@@ -242,7 +242,7 @@
                                         data-product-list=
                                         "from market_show via market as gift to add_item"
                                         data-ga-tracking-id=
-                                        "UA-187635890-1" type=
+                                        "G-J1ZTKT1KBJ" type=
                                         "submit"><input type=
                                         "hidden" name=
                                         "cart_item[variation_id]"
@@ -275,7 +275,7 @@
                                           data-product-list=
                                           "from market_show via market as gift to add_item"
                                           data-ga-tracking-id=
-                                          "UA-187635890-1" type=
+                                          "G-J1ZTKT1KBJ" type=
                                           "submit">ギフトとして贈る</button>
                                         </div>
                                       </form>
